[gd_scene load_steps=9 format=3 uid="uid://yctp56figf5i"]

[ext_resource type="Texture2D" uid="uid://bl4x033luapqh" path="res://assets/images/menu2.png" id="1_8dgfv"]
[ext_resource type="Script" uid="uid://q0yhx30115jw" path="res://scripts/sidebar_layer.gd" id="1_a6bjl"]
[ext_resource type="Texture2D" uid="uid://dvy5lqaeimcal" path="res://assets/images/salir.png" id="2_a6bjl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pw63i"]
bg_color = Color(0.172549, 0.0941176, 0.164706, 0.956863)

[sub_resource type="Theme" id="Theme_pw63i"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7ykc4"]
bg_color = Color(0.117647, 0.0705882, 0.0666667, 1)
border_width_bottom = 10
border_color = Color(0.0901961, 0.0392157, 0.0470588, 1)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40
shadow_color = Color(0, 0, 0, 0.682353)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pw63i"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7ykc4"]

[node name="SidebarLayer" type="CanvasLayer"]
script = ExtResource("1_a6bjl")

[node name="PanelPrincipal" type="PanelContainer" parent="."]
anchors_preset = -1
anchor_right = 0.556
anchor_bottom = 1.0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_pw63i")

[node name="SideVista1" type="MarginContainer" parent="PanelPrincipal"]
layout_mode = 2
theme_override_constants/margin_left = 42
theme_override_constants/margin_top = 42
theme_override_constants/margin_right = 42
theme_override_constants/margin_bottom = 42

[node name="VBoxContainer" type="VBoxContainer" parent="PanelPrincipal/SideVista1"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="PanelPrincipal/SideVista1/VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="PanelPrincipal/SideVista1/VBoxContainer/HBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(156, 156)
layout_mode = 2
icon = ExtResource("1_8dgfv")
expand_icon = true

[node name="VSeparator" type="VSeparator" parent="PanelPrincipal/SideVista1/VBoxContainer/HBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="PanelPrincipal/SideVista1/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Proyecto_1"
vertical_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="PanelPrincipal/SideVista1/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="BotonModelos" type="Button" parent="PanelPrincipal/SideVista1/VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
theme = SubResource("Theme_pw63i")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_7ykc4")
text = "Obtener Modelos"

[node name="Modificar Escalas" type="Button" parent="PanelPrincipal/SideVista1/VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
theme = SubResource("Theme_pw63i")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_7ykc4")
text = "Modificar Escalas"

[node name="Importar Modelos" type="Button" parent="PanelPrincipal/SideVista1/VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
theme = SubResource("Theme_pw63i")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_7ykc4")
text = "Importar Modelos"

[node name="GuardarP" type="Button" parent="PanelPrincipal/SideVista1/VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
theme = SubResource("Theme_pw63i")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_7ykc4")
text = "Guardar Proyecto"

[node name="HSeparator" type="HSeparator" parent="PanelPrincipal/SideVista1/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/separator = SubResource("StyleBoxEmpty_pw63i")

[node name="Control" type="HBoxContainer" parent="PanelPrincipal/SideVista1/VBoxContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.0

[node name="ExitButton" type="Button" parent="PanelPrincipal/SideVista1/VBoxContainer/Control"]
unique_name_in_owner = true
custom_minimum_size = Vector2(196, 0)
layout_direction = 1
layout_mode = 2
theme = SubResource("Theme_pw63i")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_7ykc4")
text = " Exit  "
icon = ExtResource("2_a6bjl")
expand_icon = true

[node name="VSeparator" type="VSeparator" parent="PanelPrincipal/SideVista1/VBoxContainer/Control"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/separator = SubResource("StyleBoxEmpty_7ykc4")

[node name="BotonSalir2" type="Button" parent="PanelPrincipal/SideVista1/VBoxContainer/Control"]
custom_minimum_size = Vector2(196, 0)
layout_direction = 1
layout_mode = 2
theme = SubResource("Theme_pw63i")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_7ykc4")
text = "Info"
vertical_icon_alignment = 2

[connection signal="pressed" from="PanelPrincipal/SideVista1/VBoxContainer/HBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="PanelPrincipal/SideVista1/VBoxContainer/BotonModelos" to="." method="_on_boton_modelos_pressed"]
[connection signal="pressed" from="PanelPrincipal/SideVista1/VBoxContainer/Modificar Escalas" to="." method="_on_modificar_escalas_pressed"]
[connection signal="pressed" from="PanelPrincipal/SideVista1/VBoxContainer/Importar Modelos" to="." method="_on_importar_modelos_pressed"]
[connection signal="pressed" from="PanelPrincipal/SideVista1/VBoxContainer/GuardarP" to="." method="_on_guardar_p_pressed"]
[connection signal="pressed" from="PanelPrincipal/SideVista1/VBoxContainer/Control/ExitButton" to="." method="_on_boton_salir_pressed"]
